--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: flick_video_player
 description: Flick Video Player is a video player for flutter. The video_player plugin gives low level access for the video playback.
+repository: https://github.com/GeekyAnts/flick-video-player
 
 version: 0.1.0
 
