added homepage in pubspec and upgraded version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: flick_video_player
 description: Flick Video Player is a video player for flutter. The video_player plugin gives low level access for the video playback.
 repository: https://github.com/GeekyAnts/flick-video-player
+homepage: https://github.com/GeekyAnts/flick-video-player
 
-version: 0.1.0
+version: 0.1.1
 
 environment:
   sdk: '>=2.4.0 <3.0.0'
