--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,20 @@
 name: flick_video_player
-description: Flick Video Player is a video player for flutter. The video_player plugin gives low level access for the video playback.
+description: Flick Video Player is a video player for flutter. The video_player
+  plugin gives low level access for the video playback.
 repository: https://github.com/GeekyAnts/flick-video-player
 homepage: https://github.com/GeekyAnts/flick-video-player
 
-version: 0.1.1
+version: 0.1.1+1
 
 environment:
-  sdk: '>=2.4.0 <3.0.0'
+  sdk: ">=2.10.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  video_player: ^0.10.8+1
-  provider: ^4.0.5
-  wakelock: ^0.1.4+1
+  provider: ^4.3.2+2
+  video_player: ^0.11.1+2
+  wakelock: ^0.2.0+1
 
 dev_dependencies:
   flutter_test:
