--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   flick_video_player:
     path: ../
   cupertino_icons: ^1.0.0
-  provider: ^4.3.2+2
-  video_player: ^0.11.1+2
+  provider: ^4.3.3
+  video_player: ^1.0.1
   visibility_detector: ^0.1.5
 
 dev_dependencies:
