--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  provider: ^4.3.2+2
-  video_player: ^0.11.1+2
-  wakelock: ^0.2.0+1
+  provider: ^4.3.3
+  video_player: ^1.0.1
+  wakelock: ^0.2.1+1
 
 dev_dependencies:
   flutter_test:
