--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,14 +6,14 @@ homepage: https://github.com/GeekyAnts/flick-video-player
 version: 0.1.1
 
 environment:
-  sdk: '>=2.4.0 <3.0.0'
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  video_player: ^0.10.8+1
-  provider: ^4.0.5
-  wakelock: ^0.1.4+1
+  video_player: ^2.0.0
+  provider: ^5.0.0
+  wakelock: ^0.5.0+2
 
 dev_dependencies:
   flutter_test:
