--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,10 +19,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_widgets: ^0.1.12
+  visibility_detector: ^0.1.5
   flick_video_player:
     path: '../'
-  video_player: 0.10.8+1
+  video_player: ^2.0.2
   provider: 4.0.5
 
   # The following adds the Cupertino Icons font to your application.
