--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  video_player: ^0.10.8+1
+  video_player: ^2.0.2
   provider: ^4.0.5
   wakelock: ^0.1.4+1
 
