--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,12 +14,12 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.1.0 <3.0.0'
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  visibility_detector: ^0.1.5
+  visibility_detector: ^0.2.0
   flick_video_player:
     path: '../'
   video_player: ^2.0.2
