--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   video_player: ^2.0.2
   provider: ^5.0.0
   wakelock: ^0.5.0+2
+  universal_html: ^2.0.8
 
 dev_dependencies:
   flutter_test:
