closed caption added and intialization fix

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -50,6 +50,7 @@ flutter:
     - images/9th_may_poster.jpg
     - images/rio_from_above_poster.jpg
     - images/the_valley_poster.jpg
+    - images/bumble_bee_captions.srt
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
