--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,16 +16,16 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: '>=2.12.0-0 <3.0.0'
+  sdk: ">=2.12.0-0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   visibility_detector: ^0.2.0
   flick_video_player:
-    path: '../'
-  video_player: ^2.1.12
-  provider: ^5.0.0
+    path: "../"
+  video_player: ^2.1.14
+  provider: ^6.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
