--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
     sdk: flutter
   video_player: ^2.1.12
   provider: ^6.0.1
-  wakelock: ^0.5.0+2
+  wakelock: ^0.5.6
   universal_html: ^2.0.8
 
 dev_dependencies:
