--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
     sdk: flutter
   visibility_detector: ^0.2.0
   flick_video_player:
-    path: '../'
-  video_player: ^2.2.5
+    path: "../"
+  video_player: ^2.2.7
   provider: ^6.0.1
 
   # The following adds the Cupertino Icons font to your application.
