--- a/example/macos/Runner/Configs/AppInfo.xcconfig
+++ b/example/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = example
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = --platformswindowsmacoslinux.example
+PRODUCT_BUNDLE_IDENTIFIER = com.flickexample.example
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2021 --platforms=windows,macos,linux. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2022 com.flickexample. All rights reserved.
