--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -16,20 +16,21 @@ version: 1.0.0+1
 publish_to: none
 
 environment:
-  sdk: ">=2.12.0-0 <3.0.0"
+  sdk: '>=2.14.0 <3.0.0'
+  flutter: '>=2.10.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  visibility_detector: ^0.2.0
+  visibility_detector: ^0.3.0
   flick_video_player:
-    path: "../"
-  video_player: ^2.2.10
+    path: '../'
+  video_player: ^2.4.0
   provider: ^6.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
