--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   provider: ^6.0.1
   wakelock: ^0.6.0
   universal_html: ^2.0.8
+  dio: ^4.0.6
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
