conf(FlickVideoPlayer): use wakelock compatible with Flutter 3.10 and Dart 3

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   video_player: ^2.4.0
   provider: ^6.0.1
-  wakelock: ^0.6.0
+  wakelock:
   universal_html: ^2.0.8
   dio: ^4.0.6
   path_provider: ^2.0.11
@@ -25,3 +25,17 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+# https://github.com/GeekyAnts/flick-video-player/issues/226
+# https://github.com/creativecreatorormaybenot/wakelock/pull/213
+dependency_overrides:
+  wakelock:
+    git:
+      url: https://github.com/formigas/wakelock.git
+      path: wakelock/
+      ref: main
+  wakelock_windows:
+    git:
+      url: https://github.com/formigas/wakelock.git
+      path: wakelock_windows/
+      ref: main
