--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -75,3 +75,17 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+# https://github.com/GeekyAnts/flick-video-player/issues/226
+# https://github.com/creativecreatorormaybenot/wakelock/pull/213
+dependency_overrides:
+  wakelock:
+    git:
+      url: https://github.com/formigas/wakelock.git
+      path: wakelock/
+      ref: main
+  wakelock_windows:
+    git:
+      url: https://github.com/formigas/wakelock.git
+      path: wakelock_windows/
+      ref: main
