--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,20 @@ dependencies:
     sdk: flutter
   video_player: ^2.4.0
   provider: ^6.0.1
-  wakelock: ^0.6.0
+# https://github.com/creativecreatorormaybenot/wakelock/pull/213
+# https://github.com/GeekyAnts/flick-video-player/issues/226
+  wakelock:
+    git:
+      url: https://github.com/formigas/wakelock.git
+      path: wakelock/
+      ref: main
+  wakelock_windows:
+    git:
+      url: https://github.com/formigas/wakelock.git
+      path: wakelock_windows/
+      ref: main
   universal_html: ^2.0.8
-  dio: ^4.0.6
+  dio: ^5.2.1
   path_provider: ^2.0.11
 
 dev_dependencies:
