--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,11 +3,11 @@ description: Flick Video Player is a video player for flutter. The video_player 
 repository: https://github.com/GeekyAnts/flick-video-player
 homepage: https://github.com/GeekyAnts/flick-video-player
 
-version: 0.5.0
+version: 0.6.0
 
 environment:
-  sdk: '>=2.14.0 <4.0.0'
-  flutter: '>=3.16.2'
+  sdk: ">=2.14.0 <4.0.0"
+  flutter: ">=3.16.2"
 
 dependencies:
   flutter:
