--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   video_player: ^2.8.1
   provider: ^6.1.1
-  wakelock: ^0.6.2
+  wakelock_plus: ^1.1.6
   universal_html: ^2.2.4
   dio: ^5.4.0
   path_provider: ^2.1.1
