--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,13 @@ homepage: https://github.com/GeekyAnts/flick-video-player
 version: 0.7.0
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
   flutter: ">=3.16.5"
 
 dependencies:
   flutter:
     sdk: flutter
-  video_player: ^2.8.1
+  video_player: ^2.8.6
   provider: ^6.1.1
   wakelock_plus: ^1.1.4
   universal_html: ^2.2.4
