--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flick_video_player:
     path: "../"
   video_player: ^2.8.6
+  wakelock_web: ^0.4.0
   provider: ^6.0.1
 
   # The following adds the Cupertino Icons font to your application.
