--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  build_runner: ^2.0.0
+  mockito: ^5.0.15
   flutter_test:
     sdk: flutter
 
